docs/api/qiskit-ibm-runtime/0.47/noise-learner-v3-noise-learner-v3.mdx
---
title: NoiseLearnerV3 (v0.47)
description: API reference for qiskit_ibm_runtime.noise_learner_v3.NoiseLearnerV3 in qiskit-ibm-runtime v0.47
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.noise_learner_v3.NoiseLearnerV3
---

# NoiseLearnerV3

<Class id="qiskit_ibm_runtime.noise_learner_v3.NoiseLearnerV3" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.47/qiskit_ibm_runtime/noise_learner_v3/noise_learner_v3.py#L42-L169" signature="NoiseLearnerV3(mode=None, options=None)" modifiers="class">
  Bases: `object`

  Class for executing noise learning experiments.

  The noise learner allows characterizing the noise processes affecting target instructions, based on the Pauli-Lindblad noise model described in \[1]. The instructions provided to the [`run()`](#qiskit_ibm_runtime.noise_learner_v3.NoiseLearnerV3.run "qiskit_ibm_runtime.noise_learner_v3.NoiseLearnerV3.run") method must contain a twirled-annotated [`BoxOp`](/docs/api/qiskit/qiskit.circuit.BoxOp) containing ISA operations. The result of a noise learner job contains a list of [`NoiseLearnerV3Result`](results-noise-learner-v3-result "qiskit_ibm_runtime.results.NoiseLearnerV3Result") objects, one for each given instruction.

  **Parameters**

  *   **mode** (*BackendV2 |* [*Session*](session "qiskit_ibm_runtime.Session")  *|*[*Batch*](batch "qiskit_ibm_runtime.Batch") *| None*) –

      The execution mode used to make the primitive query. It can be:

      *   A `Backend` if you are using job mode.
      *   A `Session` if you are using session execution mode.
      *   A `Batch` if you are using batch execution mode.

      Refer to the [Qiskit Runtime documentation](/docs/guides/execution-modes) for more information about the execution modes.

  *   **options** ([*NoiseLearnerV3Options*](options-models-noise-learner-v3-options "qiskit_ibm_runtime.options_models.noise_learner_v3_options.NoiseLearnerV3Options")) – The desired options.

  **References**

  1.  E. van den Berg, Z. Minev, A. Kandala, K. Temme, *Probabilistic error cancellation with sparse Pauli–Lindblad models on noisy quantum processors*, Nature Physics volume 19, pages 1116–1121 (2023). [arXiv:2201.09866 \[quant-ph\]](https://arxiv.org/abs/2201.09866)

  ## Attributes

  ### options

  <Attribute id="qiskit_ibm_runtime.noise_learner_v3.NoiseLearnerV3.options" attributeTypeHint="NoiseLearnerV3Options">
    The options in this noise learner.
  </Attribute>

  ## Methods

  ### backend

  <Function id="qiskit_ibm_runtime.noise_learner_v3.NoiseLearnerV3.backend" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.47/qiskit_ibm_runtime/noise_learner_v3/noise_learner_v3.py#L167-L169" signature="backend()">
    Return the backend the primitive query will be run on.

    **Return type**

    BackendV2
  </Function>

  ### run

  <Function id="qiskit_ibm_runtime.noise_learner_v3.NoiseLearnerV3.run" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.47/qiskit_ibm_runtime/noise_learner_v3/noise_learner_v3.py#L105-L165" signature="run(instructions)">
    Submit a request to the noise learner program.

    **Parameters**

    **instructions** (*Iterable\[CircuitInstruction]*) – The instructions to learn the noise of.

    **Returns**

    The submitted job.

    **Raises**

    **IBMInputValueError** – If the instructions cannot be used with the noise learner, such as: \* If an instruction contains a box without twirl annotation. \* If an instruction contains unphysical qubits, i.e., qubits that do not belong to the “physical” register `QuantumRegister(backend.num_qubits, 'q')` for the backend in use. \* If an instruction contains a box with non-ISA gates. \* If an instruction cannot be learned by any of the supported learning protocols.

    **Return type**

    [RuntimeJobV2](runtime-job-v2 "qiskit_ibm_runtime.RuntimeJobV2")
  </Function>
</Class>

